--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel index.html",
     "dev": "parcel index.html --open",
-    "build": "parcel build index.html",
+    "build": "npx parcel build index.html",
     "pack": "npm run pack"
   },
   "dependencies": {
